--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
               &nbsp; &nbsp;
                 
               <figure class="item" style="display: inline-block">
-                <a href=""><img src="https://static.wikia.nocookie.net/windows/images/1/1c/Visual_Studio_Code_1.35_icon.png/revision/latest?cb=20231126223748" alt="VS" width = 60px /></a>  
+                <a href=""><img src="https://img.icons8.com/?size=100&id=9OGIyU8hrxW5&format=png&color=000000" alt="VS" width = 60px /></a>  
                 <figcaption style="text-align: center">VISUAL STUDIO</figcaption>
               </figure>
               &nbsp; &nbsp;
@@ -1268,14 +1268,14 @@
             data-aos-delay="100"
           >
             <a
-              href="https://drive.google.com/file/d/1ifY5HWEiFlNk78wGQVKASoCn5Iqf5DQn/view?usp=sharing"
+              href="https://drive.google.com/file/d/1eODUv26qNCgJbQ8mUFMcVBdP2TakDri-/view?usp=sharing"
               target="_blank"
               ><div class="icon"><i class="icofont-page"></i></div
             ></a>
             <h4 class="title">
               <a
                 style="color: #12d640"
-                href="https://drive.google.com/file/d/1ifY5HWEiFlNk78wGQVKASoCn5Iqf5DQn/view?usp=sharing"
+                href="https://drive.google.com/file/d/1eODUv26qNCgJbQ8mUFMcVBdP2TakDri-/view?usp=sharing"
                 target="_blank"
                 >My Resume</a
               >
@@ -1283,7 +1283,7 @@
             <p class="description" style="color: #fff">
               Check My Resume
               <a
-                href="https://drive.google.com/file/d/1ifY5HWEiFlNk78wGQVKASoCn5Iqf5DQn/view?usp=sharing"
+                href="https://drive.google.com/file/d/1eODUv26qNCgJbQ8mUFMcVBdP2TakDri-/view?usp=sharing"
                 target="_blank"
                 >here</a
               >.
