--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </svg>
           </a>
           <a
-            href="www.linkedin.com/in/sanjaykumar13055"
+            href="https://linkedin.com/in/sanjaykumar13055"
             target="_blank"
             class="linkedin"
             ><i class="bx bxl-linkedin"></i
